--- a/config_files/SEIRHVD.toml
+++ b/config_files/SEIRHVD.toml
@@ -1,165 +1,138 @@
 # Pandemic Suite Configuration File		
 
 title = 'Example of a SEIRHVD Configuration File'
-date = '2021-03-01'
+date = '2021-06-01'
 user = ''
 
 [model]
 	name = "SEIRHVD"
-	compartments  = ['S','E','I','R','H','V','D'] # Nombres de los estados
-	variables  = ['S','S_d','S_ac','E','E_d','E_ac','I','I_ac','R','H','V','D']
-	
-
-[parameters]
-	tsim = 500 # simulation days
-	
-	beta = 0.15
-	mu = 0.298
-	k = 0
-	k_I = 0
-	k_R = 0
-	seroprevfactor = 1
-	expinfection = 0
-	
-	alpha = '{"function":"Events","values":[0.45,0.85],"days":[[0,100],[100,500]]}'  # Refer to function constructor library
-	
-	chi = 0
-	
-	# -------------------------- #
-	#   Transition Parameters    # 
-	# -------------------------- #
-	
-	# Transition from exposed to Asymptomatic Infected
-        pE_Ias = 0.4  
-        tE_Ias = 5.0
-
-	# Transition from exposed to  Mild Infected
-        pE_Imi = 0.55 
-        tE_Imi = 5.0
-
-	# Transition from exposed to  Critical Infected
-        pE_Icr = 0.01666 
-        tE_Icr = 3.0
-
-	# Transition from exposed to  Serious Infected
-        pE_Ise = 0.03334 
-        tE_Ise = 3.0
-
-	# Transition from Asymptomatic Infected to Recovered
-        pIas_R = 1.0   
-        tIas_R = 10.0
-
-	# Transition from Mild Infected to Recovered
-        pImi_R = 1.0  
-        tImi_R = 15.0
-
-	# Transition from Serious Infected to Serious Hospitalized (When Hospital capacity is not saturated)
-        pIse_Hse = 1.0 
-        tIse_Hse = 3.0 
-
-	# Transition from Serious Infected to Death (When Hospital capacity is saturated)
-        pIse_D = 1.0  
-        tIse_D = 3.0         
-
-	# Transition from Critical Infected to Ventilator (When Ventilators capacity is not saturated)
-        pIcr_V = 1.0  
-        tIcr_V = 3.0 
-
-	# Transition from Serious Infected to Death (When Ventilators capacity is saturated)
-        pIcr_D = 1.0  
-        tIcr_D = 3.0         
-
-	# Transition from Serious Hospitalized to Recovered
-        pHse_R = 0.97 
-        tHse_R = 11.0
-
-	# Transition from Serious Hospitalized to Ventilators (When Ventilators capacity is not saturated)
-        pHse_V = 0.03 
-        tHse_V = 3.0
-
-	# Transition from Serious Hospitalized to Death (When Ventilators capacity is saturated)
-        pHse_D = 0.03 
-        tHse_D = 3.0        
-
-	# Transition from Ventilators to Hospital Recovery (Hout)
-        pV_Hout = 0.5   
-        tV_Hout = 15.0
-
-	# Transition from Ventilators to Death
-        pV_D = 0.5 
-        tV_D = 15.0
-
-	# Transition from Hospital Recovery (Hout) to Recovered
-        pHout_R = 1.0 
-        tHout_R = 4.0
-
-	# Transition from Dead to buried
-        pD_B = 1.0 
-        tD_B = 1.0 
-
-	# Contagion by deads rate
-        betaD = 0 
-        # Recovered Immunity loss
-        eta = 0.0  
-
-	# Subreport
-	pImi_det = 0.4
-	pIas_det = 0.1
-	pIse_det = 1
-	pIcr_det = 1
-	
-	
-	
-[initialconditions]
-	overwrite_ic = true # In case we use realdata we can overwrite the IC with this values
-
-	population = 1000000
-	B = 1000
-	D = 50
-	R = 5000
-
-	# Active Infected
-	I = 0	# Real Infected
-	I_det = 6000	# Detected Infected
-
-	# New daily Infected
-	I_d = 0
-	I_d_det = 3000	
-	# Accumulated Infected	
-	I_ac = 0
-	I_ac_det = 15000
-	
-	# Hospitalization 
-	# Capacity
-	H_cap = 3000
-	V_cap = 2000
-
-	# Use
-	H = 1500
-	V = 1000
-	
-	# Deaths
-	D_d = 0
-	D_cu = 0
-
+	compartments  = ['S','S_v','E','E_v','Im','Icr','Iv','R','H','D'] # Nombres de los estados
 	
 [data]
 	# Real data will set initial conditions and will be available to be plotted and to calculate errors	
-	importdata = true
-	datafile = false
-	initdate = '2020-12-15'
-	country = 'Chile'
-	state = '13101'	
-	healtservice = ''
-	name = 'Santiago'
-	# The next one is optional
+	datafile = false # File path for importing data from file 
+	importdata = false # Import data from external source
+
+	# parameters to use when importing from external sources 
+	initdate = ''
+	country = ''
+	state = ''
+	county = ''#'13101'
+	loc_name= '' # optional 
+	
+[parameters]
+	[parameters.static]
+	t_init = 0 # Initial day
+	t_end = 500 # Final day
+	timestep = 0.01 # Timestep for solver
+	
+	# Saturation dynamic
+	k_I = 0
+	k_R = 0
+
+	popfraction = 1 # Fraction of the total population that take part on the dynamic at the beginning
+
+	mu = 0.298 # E(0) = mu*I(0)
+	
+	
+	[parameters.dynamic]
+		
+	# Contagion and movility
+	alpha = 1
+	beta = 0.2
+	beta_v = 0.05
+	
+	# Vaccination
+	Psi = 0 # Vaccines per day
+	v = 0.9 # Vaccine effectivity
+	
+	# External flux rates over time 
+	S_f = 0
+	Sv_f = 0
+	E_f = 0
+	Ev_f = 0
+	Iv_f = 0
+	Im_f = 0
+	Icr_f = 0
+	H_f = 0
+	D_f = 0 
+	R_f = 0	
+
+
+	# -------------------------- #
+	#   Transition Parameters    # 
+	# -------------------------- #
+	# Exposed
+	pE_Im = 0.95
+	tE_Im = 3.0 
+	pE_Icr = 0.05
+	tE_Icr = 3.0 
+
+	# Vaccinated exposed
+	tEv_Iv = 3.0 
+
+	# Infectious (asymptomatic + mild + severe)
+        tIm_R = 12.0 
+	
+	# Infectious (critical)
+        tIcr_H = 7.0
+    
+	# Infectious (vaccinated)
+        pIv_R = 0.95
+        tIv_R = 12.0 
+
+        pIv_H = 0.05
+        tIv_H = 7.0
+        
+        # Hospitalized (IMV)
+        pHR = 0.7
+        tHR = 11
+        
+        pHD = 0.3
+        tHD = 11
+	
+	# Immunity loss 
+	pR_S = 0 # probability
+	tR_S = 90 # time
+	
+	# Subreport: Detected infected are calculated from the real infected given in the IC
+	pIcr_det = 1	
+	pIm_det = 0.7
+	pIv_det = 0.7	
 
 	
-[ephemeris]
-	# In case we work with real data, this will help to locate important dates in our plots
-	newyear = '2020-12-31'
-	fiestaspatrias = '2020-09-18'
+	
+[initialconditions]
 
+	population = 1000000
+	Sv = 0
+	
+	# Non vaccinated infected
+	I = 6000 # Active Infected
+	I_d = 3000 # New daily Infected
+	I_ac = 15000 # Accumulated Infected	
+
+	# Vaccinated infected: If false they will be calculated using the vaccinated proportion of susceptibles
+	Iv = false
+	Iv_d = false
+	Iv_ac = false
+	
+	# Hospitalization 
+	H_cap = 3000 # Capacity
+	H = 1500 # Use
+	
+	# Deaths
+	D = 1000
+	D_d = 50
+
+	# Recovered
+	R = 5000
+
+	# Leave E and E_d as false for using mu
+	E = false
+	E_d = false
+	Ev_ = false
+	Ev_d = false	
 
 
 
