--- a/Examples_2/cfg/SEIR_v2.toml
+++ b/Examples_2/cfg/SEIR_v2.toml
@@ -43,12 +43,12 @@ user = 'Samuel'
 	
 	[parameters.dynamic]
 	beta = 0.2
-	alpha = '{"function":"Events","values":[1,0.5,0.8],"days":[[0,100],[100,130],[130,500]]}'  # Refer to function constructor library
+	alpha = '{"function":"events","values":[1,0.5,0.8],"days":[[0,100],[100,130],[130,500]]}'  # Refer to function constructor library
 	
 	# External flux rates over time 
-	S_f = 0#'{"function":"Events","values":[10000,-10000],"days":[[190,200],[210,220]]}'
+	S_f = 0#'{"function":"events","values":[10000,-10000],"days":[[190,200],[210,220]]}'
 	E_f = 0
-	I_f = '{"function":"Events","values":[10000],"days":[[190,200]]}'
+	I_f = '{"function":"events","values":[10000],"days":[[190,200]]}'
 	R_f = 0	
 	
 	# -------------------------- #
