--- a/Examples/cfg/SEIRHVD_ABM.toml
+++ b/Examples/cfg/SEIRHVD_ABM.toml
@@ -18,7 +18,11 @@ user = ''
 	country = ''
 	state = ''
 	county = ''#'13101'
-	loc_name= '' # optional 
+	loc_name= '' # optional
+
+	#network parameters
+	network = true # Use a network to model the population
+	network_func = 'watts_strogatz(100_000, 4, 0.51)' #the call to a function from Graphs.jl for building a network
 	
 [parameters]
 	[parameters.static]
@@ -30,7 +34,7 @@ user = ''
 	[parameters.dynamic]
 		
 	# Contagion and movility
-	alpha = 0.8
+	alpha = 0.2 
 
 	#beta
 	beta_nn = 0.8 #from not vaccinated to not vaccinated
@@ -46,27 +50,36 @@ user = ''
 	# -------------------------- #
 
 	# Exposed
-		tE_I = 5.0 
+		tE_I = 5.0 # mean time from exposed to infectious
+		vE_I = 2.0 # variance of time from exposed to infectious
 	
 	# Infectious 
         tIm_R = 12.0
+		vIm_R = 2.0
+
 		tImv_R = 12.0
+		vImv_R = 2.0
+
 		tIcr_D = 7.0
+		vIcr_D = 2.0
+
 		tIv_D = 7.0
+		vIv_D = 2.0
 
         pIcr_H = 0.3
-         
 
     # Hospitalized 
 		tH_R = 7.0
+		vH_R = 2.0
+
 		tH_D = 4.0
+		vH_D = 2.0
 
         pH_D = 0.3
 	
 	# Immunity loss 
 		tR_S = 90.0
-
-	stepsPerDay = 5
+		vR_S = 10.0
 	
 
 [initialconditions]
