--- a/Examples/cfg/SEIR_ABM.toml
+++ b/Examples/cfg/SEIR_ABM.toml
@@ -29,44 +29,40 @@ user = 'Default'
 	healthservice = ''
 	loc_name= '' # optional 
 
+	#network parameters
+	network = true # Use a network to model the population
+	network_func = 'watts_strogatz(100_000, 4, 0.51)' #the call to a function from Graphs.jl for building a network
+
 [parameters]
 	[parameters.static]
-	network = false
+
 	t_init = 0
 	t_end = 500 # Final day
 	stepsPerDay = 5
 
 	mu = 0.298 # E(0) = mu*I(0)
-		
+
+
 	[parameters.dynamic]
 	beta = 0.2
-	alpha = 1
+	alpha = 0.3
 
 	
 	# -------------------------- #
 	#   Transition Parameters    # 
 	# -------------------------- #	
-	# Transition time between exposed and infectious
-        tE_I = 5.0 # 1/sigma
-	# Transition time between infectious and removed
-        tI_R = 10.0 # 1/gamma
-	
-	# Average Immunity loss rate (1/time)
-	rR_S = 0 
+        
+	tE_I = 5.0 # mean time it takes an agent to go from exposed to infectious
+	vE_I = 2.0 # variance of time it takes an agent to go from exposed to infectious
+
+    tI_R = 10.0 # mean time it takes an agent to go from infectious to removed
+	vI_R = 2.0 # variance of time it takes an agent to go from infectious to removed
+
 	
 [initialconditions]
-	# total population in area
-	population = 100_000
-
-	# Recovered	
-	R = 3000
-
-	# Infected	
-	# Active Infected
-	I = 10	
-	
-	
-	# Leave E and E_d as false for using mu
-	E = 0
+	S = 99_900
+	E = 100
+	I = 0
+	R = 0
 	
 
