--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,6 +24,8 @@ sphinx:
 #    - pdf
 
 # Optionally declare the Python requirements required to build your docs
-#python:
-#   install:
+python:
+   install:
 #   - requirements: docs/requirements.tx
+    - method: pip
+      path: .
