--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -25,7 +25,10 @@ sphinx:
 
 # Optionally declare the Python requirements required to build your docs
 python:
-   install:
-#   - requirements: docs/requirements.tx
-    - method: pip
+  version: "3.10"
+  install:
+    - method: setuptools
       path: .
+
+#   - requirements: docs/requirements.tx
+# path: .
