--- a/Examples/cfg/SEIR_ABM.toml
+++ b/Examples/cfg/SEIR_ABM.toml
@@ -5,7 +5,7 @@ date = '2021-04-20'
 user = 'Default'
 
 [model]
-	name = "Example simulation"
+	name = 'SEIR_ABM'
 	id = ''
 	model = 'SEIR_ABM'
 	compartments  = ['S','E','I','R'] 
