--- a/Examples/cfg/SIR_dynamic.toml
+++ b/Examples/cfg/SIR_dynamic.toml
@@ -1,6 +1,6 @@
 # Pandemic Suite Configuration File		
 
-title = 'Example of a SEIR Configuration File'
+title = 'Example of a SIR Configuration File'
 date = '2021-04-20'
 user = 'Samuel'
 
