Fixed bugs in default config files

--- a/cv19gm/default_config_files/SEIR.toml
+++ b/cv19gm/default_config_files/SEIR.toml
@@ -5,7 +5,7 @@ date = '2022-12-1' # YY-MM-DD
 user = 'Default'
 
 [model]
-	name = "Example simulation"
+	name = 'SEIR'
 	id = ''
 	model = 'SEIR'
 	compartments  = ['S','E','I','R'] 
