--- a/cv19gm/default_config_files/SEIR_ABM.toml
+++ b/cv19gm/default_config_files/SEIR_ABM.toml
@@ -1,11 +1,11 @@
 # Pandemic Suite Configuration File		
 
-title = 'Example of a SEIR Configuration File'
+title = 'SEIR ABM Default Configuration File'
 date = '2021-04-20'
 user = 'Default'
 
 [model]
-	name = "Example simulation"
+	name = 'SEIR_ABM'
 	id = ''
 	model = 'SEIR_ABM'
 	compartments  = ['S','E','I','R'] 
